Size pdf change

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hoja de Vida - Sergio Vanegas</title>
 </head>
 <body>
-    
+    <object id="HVV" data="recursos/CV.pdf" type="application/pdf"></object>
 </body>
 </html>
